# HDR_Display

./: .gitignore
HDR_Program/: CMakeLists.txt  CMakeLists.txt~
HDR_Program/cmake/: FindGLut.cmake
HDR_Program/data/: fitcurve_standard.cfg
HDR_Program/data/correction_curve/: fitcurve_paysage.cfg  fitcurve_projector.cfg  linfitcurve_cinema.cfg  linfitcurve_srgb.cfg
HDR_Program/data/hdr_images/: eiffel.hdr
HDR_Program/glrendering/: CMakeLists.txt  Camera.cpp  Camera.h  GLRender.cpp  GLRender.h  GlRender.cpp  GlRender.h  License  Mesh.cpp  Mesh.h  Object.cpp  Object.h  OpenGL.h  RenderingWidget.cpp  RenderingWidget.h  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  camera.cpp  camera.h  common.h
HDR_Program/glrendering/GL/: CMakeLists.txt
HDR_Program/glrendering/ObjFormat/: CMakeLists.txt  CMakeLists.txt~
HDR_Program/gui/: CMakeLists.txt  gui.cpp  gui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
HDR_Program/shaders/: backPanel.frag  frontPanel.frag  simple.frag  simple.vert  standardPanel.frag  standardPanel.vert
HDR_Program/src/: BackPanel.cpp  BackPanel.h  CMakeLists.txt~  Correction.h  DisplayDevice.cpp  DisplayDevice.h  DisplayManager.cpp  DisplayManager.h  FrontPanel.cpp  FrontPanel.h  GLRender.h  HDRProcess.cpp  HDRProcess.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  ImageManager.h  Includes.h  StandardPanel.cpp  StandardPanel.h  Window.cpp  Window.h  main.cpp
HDR_Program/src/correction/: Correction.cpp  Correction.h  Linearisation.cpp  Linearisation.h  courbe.cpp  courbe.h
HDR_Program/src/cpp/: main.cpp
HDR_Program/src/headers/: BackPanel.h  Correction.h  DisplayDevice.h  GLRender.h  HDRProcess.h  Image.h  ImageIO.h  ImageManager.h
